vueで作成したページのリリース

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>Hello World</h1>
-<a href='/portfolio'>ポートフォリオ</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>ery-sk.github.io</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
